OpenWindow 'gracefully' handles disconnected parent windows. bug 78504 r=dr,hyatt a=asa